# flutter-opencv-stream-processing

./: .gitignore  LICENSE  readme.md  tutorial.md
native_opencv/: .metadata  README.md  pubspec.yaml
native_opencv/android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
native_opencv/android/src/main/: AndroidManifest.xml
native_opencv/android/src/main/kotlin/com/valyouw/native_opencv/: NativeOpencvPlugin.kt
native_opencv/example/: README.md  pubspec.yaml
native_opencv/example/android/app/: build.gradle
native_opencv/example/ios/Runner/: Info.plist
native_opencv/example/ios/Runner.xcodeproj/: project.pbxproj
native_opencv/example/lib/: main.dart
native_opencv/example/test/: widget_test.dart
native_opencv/ios/: native_opencv.modulemap  native_opencv.podspec
native_opencv/ios/Classes/: NativeOpencvPlugin.h  NativeOpencvPlugin.m  SwiftNativeOpencvPlugin.swift  native_opencv.cpp
native_opencv/ios/Classes/ArucoDetector/: ArucoDetector.cpp  ArucoDetector.h
native_opencv/lib/: native_opencv.dart
native_opencv/test/: native_opencv_test.dart
opencv_app/: .metadata  README.md  pubspec.yaml
opencv_app/android/: build.gradle
opencv_app/android/app/: build.gradle
opencv_app/android/app/src/debug/: AndroidManifest.xml
opencv_app/ios/Runner/: Info.plist
opencv_app/ios/Runner.xcodeproj/: project.pbxproj
opencv_app/lib/: main.dart
opencv_app/lib/detection/: detection_page.dart  detections_layer.dart
opencv_app/lib/detector/: aruco_detector.dart  aruco_detector_async.dart
opencv_app/test/: widget_test.dart
(+5 files in other folders)
